@@ -76,6 +76,7 @@ include_directories(${XULRUNNER_INCDIR})
 IF(XULRUNNER_FLAT_INCDIR)
   add_definitions(-DOSGK_GECKOINC_FLAT)
 ELSE(XULRUNNER_FLAT_INCDIR)
+  include_directories(${XULRUNNER_INCDIR}/content)
   include_directories(${XULRUNNER_INCDIR}/dom)
   include_directories(${XULRUNNER_INCDIR}/gfx)
   include_directories(${XULRUNNER_INCDIR}/js)
